# faster_lio

./: .gitignore  CMakeLists.txt  package.xml
Log/: traj.txt
app/: CMakeLists.txt  run_mapping_online.cc
cmake/: FindGlog.cmake
config/: avia.yaml  horizon.yaml  mid360.yaml  mid360_slam.yaml  ouster128.yaml  ouster64.yaml  velodyne.yaml  velodyne_liosam.yaml  velodyne_ulhk.yaml  velodyne_utbm.yaml
docker/: docker-compose.yml
include/: common_lib.h  imu_processing.hpp  laser_mapping.h  options.h  pointcloud_preprocess.h  so3_math.h  use-ikfom.hpp  utils.h
include/IKFoM_toolkit/esekfom/: esekfom.hpp
include/IKFoM_toolkit/mtk/: build_manifold.hpp  startIdx.hpp
include/IKFoM_toolkit/mtk/src/: SubManifold.hpp  mtkmath.hpp
include/IKFoM_toolkit/mtk/types/: S2.hpp  SOn.hpp  vect.hpp
include/ivox3d/: eigen_types.h  hilbert.hpp  ivox3d.h  ivox3d_node.hpp
launch/: mapping_mid360.launch.py  mapping_mid360_slam.launch.py  mapping_mid360_viewer.launch.py  mapping_ouster128.launch.py  mapping_ouster64.launch.py  mapping_velodyne.launch.py
result/: plot_bar_time_by_step.py  plot_nn.py  plot_process_recall.py  plot_time_usage.py  rpe_odom.py
rviz_cfg/: loam_livox.rviz
src/: laser_mapping.cc  pointcloud_preprocess.cc
